Sforce8 Project Data/src/objects/RsvAccount__c.object
<CustomObject>
    <description>会計メイン
本館、レストランなど別に営業日１日分の予約会計をある単位で、積み上げ集計した売上の一覧

予約会計名は営業日付となる</description>
    <fields>
        <fullName>ADR__c</fullName>
        <inlineHelpText>客室（広間を除く）のみのADR、
Average Daily Rate：[客室別]合計／販売客室数</inlineHelpText>
        <label>ADR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agoukei__c</fullName>
        <formula>Proper__c  +  Part__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#A_出勤者合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B10__c</fullName>
        <label>#B10_ゲストリレーション</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B11__c</fullName>
        <label>#B11_洗い場</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B12__c</fullName>
        <label>#B12_経理＆設備＆デザイン</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaitenFree__c</fullName>
        <label>売店</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bgoukei__c</fullName>
        <formula>B2__c  +  B3__c  +  B4__c +  B5__c +  B6__c +  B7__c +  B8__c +  B9__c + B10__c + B11__c +  B12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#B_パート人件費合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1__c</fullName>
        <label>#C1_深夜手当</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C2__c</fullName>
        <defaultValue>4444</defaultValue>
        <label>#C2_労働保険</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeofbaiten__c</fullName>
        <label>売店(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeofmeal__c</fullName>
        <label>料理(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeofonsen__c</fullName>
        <label>入浴料(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeofother__c</fullName>
        <label>その他(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeofroom__c</fullName>
        <label>室料(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chart__c</fullName>
        <formula>if ( Field1__c+Field2__c+Urikakekei__c+Kuupon__c = 0, &quot;&quot;, IMAGE(&quot;http://chart.apis.google.com/&quot; &amp; &quot;chart?cht=p3&quot; &amp; &quot;&amp;chd=t:&quot; &amp; Text(Field1__c/(Field1__c+Field2__c+Urikakekei__c+Kuupon__c)) &amp; &quot;,&quot; &amp; Text(Field2__c/(Field1__c+Field2__c+Urikakekei__c+Kuupon__c)) &amp; &quot;,&quot; &amp; Text(Urikakekei__c/(Field1__c+Field2__c+Urikakekei__c+Kuupon__c)) &amp; &quot;,&quot; &amp; Text(Kuupon__c/(Field1__c+Field2__c+Urikakekei__c+Kuupon__c)) &amp; &quot;&amp;chs=250x100&quot; &amp; &quot;&amp;chf=bg,s,F3F3EC&amp;chl=Cash|Card|Credit|Coupon&amp;chco=FF8C00&quot;,&quot;chart text&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メディア種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Childs__c</fullName>
        <label>子供</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreditKkomi__c</fullName>
        <label>クレジット計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CuponKomi__c</fullName>
        <label>クーポン計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depositwithtax__c</fullName>
        <inlineHelpText>入金伝票の合計金額税込みです、レストランでの伝票発行はなしを前提</inlineHelpText>
        <label>入金（税込）</label>
        <summarizedField>deposit__c.depositamount__c</summarizedField>
        <summaryForeignKey>deposit__c.Reldeposit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount2__c</fullName>
        <label>割引値引合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>割引値引合計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DrinkGenkaRuikei__c</fullName>
        <label>$ドリンク-原単価計（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DrinkGoukeinoneTaxRuikei__c</fullName>
        <label>$ドリンク-合計金額（税抜）（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E1__c</fullName>
        <label>#E1_調理部門</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <label>#F1_接客</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>#F2_サービス管理</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>#F3_フロント</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRestrunt9__c</fullName>
        <label>賑亭-客単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fgoukei__c</fullName>
        <formula>F1__c  +  F2__c  +  F3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#F_現場オペレーション部門合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>現金計</label>
        <summarizedField>TTend__c.Field33__c</summarizedField>
        <summaryFilterItems>
            <field>TTend__c.Field3__c</field>
            <operation>equals</operation>
            <value>預り／現計</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TTend__c.noneaccount__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>TTend__c.RelAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>クレジット計</label>
        <summarizedField>TTend__c.Field33__c</summarizedField>
        <summaryFilterItems>
            <field>TTend__c.Field3__c</field>
            <operation>equals</operation>
            <value>ｸﾚ計・掛計等</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TTend__c.noneaccount__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>TTend__c.RelAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>DATEVALUE(MID(Name,1,4) &amp; &quot;-&quot; &amp; MID(Name,5,2) &amp; &quot;-&quot; &amp; MID(Name,7,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>予約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FutureAccount__c</fullName>
        <formula>IF ( UriageHon__c = 0,  (FutureYen__c/1.05) , UriageHon__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上計3の金額が¥0のときは、売上予測の金額を、そうでないときは、売上計3の金額を設定する、金額は税抜きとなる。</inlineHelpText>
        <label>$売上予測</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FutureYen__c</fullName>
        <inlineHelpText>予約台帳の見積合計の積み上げ集計値</inlineHelpText>
        <label>売上予測</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G1__c</fullName>
        <label>#G1_ブライダル</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G2__c</fullName>
        <label>#G2_営業</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G3__c</fullName>
        <label>#G3_その他</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GenkaritsuRuikei__c</fullName>
        <formula>IF( MealSalesfreeRuikei__c &lt;&gt;0, PurchaseRuikei__c / MealSalesfreeRuikei__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>料理仕入高（累計）/ 料理売上高（累計）</inlineHelpText>
        <label>料理原価率（累計）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GenkinkeiKomi__c</fullName>
        <label>現金計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ggoukei__c</fullName>
        <formula>G1__c  +  G2__c +  G3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#G_営業・マーケテイング部門合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H1__c</fullName>
        <label>#H1_経理部門</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HonkanCustomersGraph__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/&quot; &amp; &quot;chart?cht=p3&quot; &amp; &quot;&amp;chd=t:&quot; &amp; Text(front13__c/(front13__c + front14__c + front15__c )) &amp; &quot;,&quot; &amp; Text(front14__c/(front13__c + front14__c + front15__c)) &amp; &quot;,&quot; &amp; Text(front15__c/(front13__c + front14__c + front15__c)) &amp; &quot;&amp;chs=250x100&quot; &amp; &quot;&amp;chf=bg,s,F3F3EC&amp;chl=男性|女性|子供&amp;chco=FF8C00&quot;,&quot;chart text&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本館-客数内訳</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jgoukei__c</fullName>
        <formula>Bgoukei__c  +  B1__c  +  C1__c  +  C2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#B_パート人件費合計 +#D1_社員 +#C1_深夜手当 +#C2_労働保険</inlineHelpText>
        <label>#J_全人件費合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1ruikei__c</fullName>
        <inlineHelpText>***Prog. update #B_パート人件費合計 の累計</inlineHelpText>
        <label>#K1_パート人件費累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K2ruikei__c</fullName>
        <inlineHelpText>***Prog. update #J_全人件費合計 の累計</inlineHelpText>
        <label>#K2_全人件費累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K3ruikei__c</fullName>
        <formula>IF(Uriage6Total__c&lt;&gt;0 ,K2ruikei__c  /  Uriage6Total__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#K2_全人件費累計 / 売上計6(税抜) 累計</inlineHelpText>
        <label>#K3_人件費率累計</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>K4__c</fullName>
        <formula>IF(Bgoukei__c&lt;&gt;0,Uriage6__c  /  Bgoukei__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上計6(税抜) / #B_パート人件費合計</inlineHelpText>
        <label>#K4_売上高/パート人件費</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>K5__c</fullName>
        <formula>IF( K4__c &gt;15,&quot;良い&quot;,(IF(K4__c&gt;10,&quot;普通&quot;,&quot;悪い&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>15＜#K4_売上高/パート人件費　　: 良い
10＜#K4_売上高/パート人件費≦15 : 普通
　 　#K4_売上高/パート人件費≦10 : 悪い</inlineHelpText>
        <label>#K5_パート運用効率判定</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KakeKeiKomi__c</fullName>
        <label>掛計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kuupon__c</fullName>
        <label>クーポン計</label>
        <summarizedField>TTend__c.Field33__c</summarizedField>
        <summaryFilterItems>
            <field>TTend__c.Field3__c</field>
            <operation>equals</operation>
            <value>クーポン</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TTend__c.noneaccount__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>TTend__c.RelAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastDayofMonthFlag__c</fullName>
        <formula>CASE(VALUE(MID(Name,5,2)),2,IF(MOD(VALUE(MID(Name,1,4)),4)=0,IF(MID(Name,7,2)=&quot;29&quot;,1,0),IF(MID(Name,7,2)=&quot;28&quot;,1,0)),4,IF(MID(Name,7,2)=&quot;30&quot;,1,0),6,IF(MID(Name,7,2)=&quot;30&quot;,1,0),9,IF(MID(Name,7,2)=&quot;30&quot;,1,0),11,IF(MID(Name,7,2)=&quot;30&quot;,1,0),IF(MID(Name,7,2)=&quot;31&quot;,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>月の最終日なら１そうでないときは０</inlineHelpText>
        <label>月末最終日フラグ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MealSalesfreeRuikei__c</fullName>
        <inlineHelpText>***Prog. update 料理売上高（日別）の累計</inlineHelpText>
        <label>料理売上高（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MealSalesfree__c</fullName>
        <inlineHelpText>***Prog. update 会計明細のSUM($合計金額(税抜)) - (入湯税 + 乗馬) AND 集計対象 AND カテゴリA = A1_料理関連</inlineHelpText>
        <label>料理売上高（日別）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mealfree__c</fullName>
        <label>料理</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(VALUE(MID(Name,5,2)),1,&quot;１月&quot;,2,&quot;２月&quot;,3,&quot;３月&quot;,10,&quot;１0月&quot;,11,&quot;１1月&quot;,12,&quot;１2月&quot;,TEXT(VALUE(MID(Name,5,2)))+&quot;月&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業日付の月</inlineHelpText>
        <label>月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NyuuyokuFree__c</fullName>
        <label>入浴料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OccHallHiru__c</fullName>
        <label>広間-[昼]稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OccHallYuu__c</fullName>
        <label>広間-[夕]稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OccHall__c</fullName>
        <label>広間-稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OccHiru__c</fullName>
        <inlineHelpText>部屋昼食のOccupancy Ratio</inlineHelpText>
        <label>客室-[昼]稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OccRoom__c</fullName>
        <label>客室-稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occnights__c</fullName>
        <inlineHelpText>部屋宿泊のOccupancy Ratio</inlineHelpText>
        <label>稼働率[宿泊]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occupy__c</fullName>
        <formula>Occnights__c  +  Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occyuu__c</fullName>
        <inlineHelpText>部屋夕食のOccupancy Ratio</inlineHelpText>
        <label>客室-[夕]稼働率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Osenpersons__c</fullName>
        <inlineHelpText>入浴料を支払った人数（大人、子供）</inlineHelpText>
        <label>入浴人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Otherfree__c</fullName>
        <label>その他</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>#A2_パート</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paymentwithtax__c</fullName>
        <inlineHelpText>出金伝票の合計金額税込みです、レストランでの伝票発行はなしを前提</inlineHelpText>
        <label>出金（税込）</label>
        <summarizedField>Paymentslip__c.Pamount__c</summarizedField>
        <summaryForeignKey>Paymentslip__c.Relpayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Persons__c</fullName>
        <label>客数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pofhiru__c</fullName>
        <label>[昼]人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pofnights__c</fullName>
        <label>[泊]人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pofyuu__c</fullName>
        <label>[夕]人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proper__c</fullName>
        <label>#A1_社員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseRuikei__c</fullName>
        <inlineHelpText>***Prog. update 料理仕入高（日別）の累計</inlineHelpText>
        <label>料理仕入高（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>料理仕入高（日別）</label>
        <summarizedField>Purchase__c.Denpyoukei__c</summarizedField>
        <summaryForeignKey>Purchase__c.JinyaRevenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RChargeofdrink__c</fullName>
        <label>賑亭-ドリンク(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RChargeofmeal__c</fullName>
        <label>賑亭-料理(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPofhiru__c</fullName>
        <label>賑亭-[昼]人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPofyuu__c</fullName>
        <label>賑亭-[夕]人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrunt10__c</fullName>
        <label>賑亭-男性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrunt11__c</fullName>
        <label>賑亭-女性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrunt12__c</fullName>
        <label>賑亭-子供</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrunt1free__c</fullName>
        <label>賑亭-現計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restrunt2free__c</fullName>
        <label>賑亭-掛計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restrunt3free__c</fullName>
        <label>賑亭-内金</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RestruntCustomersGraph__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/&quot; &amp; &quot;chart?cht=p3&quot; &amp; &quot;&amp;chd=t:&quot; &amp; Text(Restrunt10__c/(Restrunt10__c + Restrunt11__c + Restrunt12__c )) &amp; &quot;,&quot; &amp; Text(Restrunt11__c/(Restrunt10__c + Restrunt11__c + Restrunt12__c)) &amp; &quot;,&quot; &amp; Text(Restrunt12__c/(Restrunt10__c + Restrunt11__c + Restrunt12__c)) &amp; &quot;&amp;chs=250x100&quot; &amp; &quot;&amp;chf=bg,s,F3F3EC&amp;chl=男性|女性|子供&amp;chco=FF8C00&quot;,&quot;chart text&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>賑亭-客数内訳</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestruntDrinkfree__c</fullName>
        <label>賑亭-ドリンク</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RestruntMealfree__c</fullName>
        <label>賑亭-料理</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevPAR__c</fullName>
        <inlineHelpText>客室（広間を除く）のみのRevPAR
Revenue Per Available Room：[客室別]合計／販売可能客室数</inlineHelpText>
        <label>RevPAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoomCfree__c</fullName>
        <label>室料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesAverageKomi__c</fullName>
        <label>客単価(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesAverage__c</fullName>
        <label>客単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesday__c</fullName>
        <formula>DATEVALUE(MID(Name,1,4) &amp; &quot;-&quot; &amp; MID(Name,5,2) &amp; &quot;-&quot; &amp; MID(Name,7,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上計上日</inlineHelpText>
        <label>営業日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShopGenkaRuikei__c</fullName>
        <label>$売店-原単価計（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShopGoukeinoneTaxRuikei__c</fullName>
        <label>$売店-合計金額（税抜）（累計）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxfee__c</fullName>
        <label>消費税</label>
        <summarizedField>TTend__c.Taxfee__c</summarizedField>
        <summaryFilterItems>
            <field>TTend__c.noneaccount__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>TTend__c.RelAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UchikinKomi__c</fullName>
        <label>内金(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uriage6Total__c</fullName>
        <inlineHelpText>***Prog. update 売上計6(税抜)の累計</inlineHelpText>
        <label>売上計6(税抜) 累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uriage6__c</fullName>
        <inlineHelpText>***Prog. update      会計明細のSUM($合計金額(税抜)) - (入湯税 + 乗馬) AND 集計対象</inlineHelpText>
        <label>売上計6(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UriageHon__c</fullName>
        <formula>Field1__c +  Field2__c +  Urikakekei__c + Kuupon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>POSレジ日計精算売上III（割引後税抜き金額）と一致</inlineHelpText>
        <label>売上計3(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UriageLastYear__c</fullName>
        <inlineHelpText>前年度の今日の売上</inlineHelpText>
        <label>前年度の売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uriagetaxfee__c</fullName>
        <formula>UriageHon__c  +  Taxfee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>売上計4(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urikakekei__c</fullName>
        <label>掛計</label>
        <summarizedField>TTend__c.Field33__c</summarizedField>
        <summaryFilterItems>
            <field>TTend__c.Field3__c</field>
            <operation>equals</operation>
            <value>掛計</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TTend__c.noneaccount__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>TTend__c.RelAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(CASE(VALUE(MID( Name ,5,2)),1, YEAR(Salesday__c)-1,2,YEAR(Salesday__c)-1,3,YEAR(Salesday__c)-1,YEAR(Salesday__c)))+&quot;年度&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zennenhi__c</fullName>
        <formula>FutureAccount__c - UriageLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$売上予測-前年度の売上</inlineHelpText>
        <label>売上前年比</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>accountingsection__c</fullName>
        <inlineHelpText>経理部門の売上を入力、forceとの差額を！</inlineHelpText>
        <label>経理売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>booking__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=lc&amp;chs=350x125&amp;chg=0,5,1,5&amp;chxt=x,y,r&amp;chxl=0:|-90|-83|-76|-69|-62|-55|-48|-41|-34|-27|-20|-13|-6|1|&quot; &amp;  $Setup.CommDefine__c.BookingCurves__c  &amp; &quot;&amp;chd=t:&quot; &amp; pointofbooking__c &amp; &quot;&amp;chco=FF8C00%2c008000&quot; &amp; &quot;&amp;chdl=A|B&quot; ,&quot;Booking Curve&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF9904&quot;&amp;chm=c,FF8C00,0,-1,6&quot;</inlineHelpText>
        <label>Booking Curves</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>femails__c</fullName>
        <label>女性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fornt2__c</fullName>
        <label>本館-クーポン(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front10__c</fullName>
        <label>本館-客数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front13__c</fullName>
        <label>本館-男性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front14__c</fullName>
        <label>本館-女性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front1free__c</fullName>
        <label>本館-現計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front2free__c</fullName>
        <label>本館-掛計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front3free__c</fullName>
        <label>本館-内金</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>graphCustomers__c</fullName>
        <formula>if ( males__c + femails__c + Childs__c = 0, &quot;&quot;, IMAGE(&quot;http://chart.apis.google.com/&quot; &amp; &quot;chart?cht=p3&quot; &amp; &quot;&amp;chd=t:&quot; &amp; Text(males__c/(males__c + femails__c + Childs__c )) &amp; &quot;,&quot; &amp; Text(femails__c/(males__c + femails__c + Childs__c)) &amp; &quot;,&quot; &amp; Text(Childs__c/(males__c + femails__c + Childs__c)) &amp;  &quot;&amp;chs=250x100&quot; &amp; &quot;&amp;chf=bg,s,F3F3EC&amp;chl=Male|Female|Child&amp;chco=FF8C00&quot;,&quot;chart text&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客数内訳</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>males__c</fullName>
        <label>男性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nyuutouM__c</fullName>
        <label>入湯税の金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nyuutouzeiP__c</fullName>
        <label>入湯税の人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pointofbooking__c</fullName>
        <label>pointofbooking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>restraunt1__c</fullName>
        <label>賑亭-売上計4(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>restraunt2__c</fullName>
        <label>賑亭-現計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>restraunt3__c</fullName>
        <label>賑亭-クレジット(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>売上</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>予約会計名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>